Change to webcam path

--- a/rtsp-simple-server.yml
+++ b/rtsp-simple-server.yml
@@ -176,179 +176,183 @@ hlsTrustedProxies: []
 # The settings under the path "all" are applied to all paths that do not match
 # another entry.
 paths:
-  all:
-    # Source of the stream. This can be:
-    # * publisher -> the stream is published by a RTSP or RTMP client
-    # * rtsp://existing-url -> the stream is pulled from another RTSP server / camera
-    # * rtsps://existing-url -> the stream is pulled from another RTSP server / camera with RTSPS
-    # * rtmp://existing-url -> the stream is pulled from another RTMP server / camera
-    # * rtmps://existing-url -> the stream is pulled from another RTMP server / camera with RTMPS
-    # * http://existing-url/stream.m3u8 -> the stream is pulled from another HLS server
-    # * https://existing-url/stream.m3u8 -> the stream is pulled from another HLS server with HTTPS
-    # * redirect -> the stream is provided by another path or server
-    # * rpiCamera -> the stream is provided by a Raspberry Pi Camera
-    source: publisher
+  cam:
+    runOnInit: ffmpeg -f v4l2 -i /dev/video0 -pix_fmt yuv420p -preset ultrafast -b:v 600k -f rtsp rtsp://localhost:$RTSP_PORT/$RTSP_PATH
+    runOnInitRestart: yes
+# paths:
+#   all:
+#     # Source of the stream. This can be:
+#     # * publisher -> the stream is published by a RTSP or RTMP client
+#     # * rtsp://existing-url -> the stream is pulled from another RTSP server / camera
+#     # * rtsps://existing-url -> the stream is pulled from another RTSP server / camera with RTSPS
+#     # * rtmp://existing-url -> the stream is pulled from another RTMP server / camera
+#     # * rtmps://existing-url -> the stream is pulled from another RTMP server / camera with RTMPS
+#     # * http://existing-url/stream.m3u8 -> the stream is pulled from another HLS server
+#     # * https://existing-url/stream.m3u8 -> the stream is pulled from another HLS server with HTTPS
+#     # * redirect -> the stream is provided by another path or server
+#     # * rpiCamera -> the stream is provided by a Raspberry Pi Camera
+#     source: publisher
 
-    # If the source is an RTSP or RTSPS URL, this is the protocol that will be used to
-    # pull the stream. available values are "automatic", "udp", "multicast", "tcp".
-    sourceProtocol: automatic
+#     # If the source is an RTSP or RTSPS URL, this is the protocol that will be used to
+#     # pull the stream. available values are "automatic", "udp", "multicast", "tcp".
+#     sourceProtocol: automatic
 
-    # Tf the source is an RTSP or RTSPS URL, this allows to support sources that
-    # don't provide server ports or use random server ports. This is a security issue
-    # and must be used only when interacting with sources that require it.
-    sourceAnyPortEnable: no
+#     # Tf the source is an RTSP or RTSPS URL, this allows to support sources that
+#     # don't provide server ports or use random server ports. This is a security issue
+#     # and must be used only when interacting with sources that require it.
+#     sourceAnyPortEnable: no
 
-    # If the source is a RTSPS, RTMPS or HTTPS URL, and the source certificate is self-signed
-    # or invalid, you can provide the fingerprint of the certificate in order to
-    # validate it anyway. It can be obtained by running:
-    # openssl s_client -connect source_ip:source_port </dev/null 2>/dev/null | sed -n '/BEGIN/,/END/p' > server.crt
-    # openssl x509 -in server.crt -noout -fingerprint -sha256 | cut -d "=" -f2 | tr -d ':'
-    sourceFingerprint:
+#     # If the source is a RTSPS, RTMPS or HTTPS URL, and the source certificate is self-signed
+#     # or invalid, you can provide the fingerprint of the certificate in order to
+#     # validate it anyway. It can be obtained by running:
+#     # openssl s_client -connect source_ip:source_port </dev/null 2>/dev/null | sed -n '/BEGIN/,/END/p' > server.crt
+#     # openssl x509 -in server.crt -noout -fingerprint -sha256 | cut -d "=" -f2 | tr -d ':'
+#     sourceFingerprint:
 
-    # If the source is an RTSP or RTMP URL, it will be pulled only when at least
-    # one reader is connected, saving bandwidth.
-    sourceOnDemand: no
-    # If sourceOnDemand is "yes", readers will be put on hold until the source is
-    # ready or until this amount of time has passed.
-    sourceOnDemandStartTimeout: 10s
-    # If sourceOnDemand is "yes", the source will be closed when there are no
-    # readers connected and this amount of time has passed.
-    sourceOnDemandCloseAfter: 10s
+#     # If the source is an RTSP or RTMP URL, it will be pulled only when at least
+#     # one reader is connected, saving bandwidth.
+#     sourceOnDemand: no
+#     # If sourceOnDemand is "yes", readers will be put on hold until the source is
+#     # ready or until this amount of time has passed.
+#     sourceOnDemandStartTimeout: 10s
+#     # If sourceOnDemand is "yes", the source will be closed when there are no
+#     # readers connected and this amount of time has passed.
+#     sourceOnDemandCloseAfter: 10s
 
-    # If the source is "redirect", this is the RTSP URL which clients will be
-    # redirected to.
-    sourceRedirect:
+#     # If the source is "redirect", this is the RTSP URL which clients will be
+#     # redirected to.
+#     sourceRedirect:
 
-    # If the source is "publisher" and a client is publishing, do not allow another
-    # client to disconnect the former and publish in its place.
-    disablePublisherOverride: no
+#     # If the source is "publisher" and a client is publishing, do not allow another
+#     # client to disconnect the former and publish in its place.
+#     disablePublisherOverride: no
 
-    # If the source is "publisher" and no one is publishing, redirect readers to this
-    # path. It can be can be a relative path  (i.e. /otherstream) or an absolute RTSP URL.
-    fallback:
+#     # If the source is "publisher" and no one is publishing, redirect readers to this
+#     # path. It can be can be a relative path  (i.e. /otherstream) or an absolute RTSP URL.
+#     fallback:
 
-    # If the source is "rpiCamera", these are the Raspberry Pi Camera parameters.
-    # ID of the camera
-    rpiCameraCamID: 0
-    # width of frames
-    rpiCameraWidth: 1920
-    # height of frames
-    rpiCameraHeight: 1080
-    # flip horizontally
-    rpiCameraHFlip: false
-    # flip vertically
-    rpiCameraVFlip: false
-    # brightness [-1, 1]
-    rpiCameraBrightness: 0
-    # contrast [0, 16]
-    rpiCameraContrast: 1
-    # saturation [0, 16]
-    rpiCameraSaturation: 1
-    # sharpness [0, 16]
-    rpiCameraSharpness: 1
-    # exposure mode.
-    # values: normal, short, long, custom
-    rpiCameraExposure: normal
-    # auto-white-balance mode.
-    # values: auto, incandescent, tungsten, fluorescent, indoor, daylight, cloudy, custom
-    rpiCameraAWB: auto
-    # denoise operating mode.
-    # values: auto, off, cdn_off, cdn_fast, cdn_hq
-    rpiCameraDenoise: auto
-    # fixed shutter speed, in microseconds.
-    rpiCameraShutter: 0
-    # metering mode of the AEC/AGC algorithm.
-    # values: centre, spot, matrix, custom
-    rpiCameraMetering: centre
-    # fixed gain
-    rpiCameraGain: 0
-    # EV compensation of the image [-10, 10]
-    rpiCameraEV: 0
-    # Region of interest, in format x,y,width,height
-    rpiCameraROI:
-    # tuning file
-    rpiCameraTuningFile:
-    # sensor mode, in format [width]:[height]:[bit-depth]:[packing]
-    # bit-depth and packing are optional.
-    rpiCameraMode:
-    # frames per second
-    rpiCameraFPS: 30
-    # period between IDR frames
-    rpiCameraIDRPeriod: 60
-    # bitrate
-    rpiCameraBitrate: 1000000
-    # H264 profile
-    rpiCameraProfile: main
-    # H264 level
-    rpiCameraLevel: '4.1'
+#     # If the source is "rpiCamera", these are the Raspberry Pi Camera parameters.
+#     # ID of the camera
+#     rpiCameraCamID: 0
+#     # width of frames
+#     rpiCameraWidth: 1920
+#     # height of frames
+#     rpiCameraHeight: 1080
+#     # flip horizontally
+#     rpiCameraHFlip: false
+#     # flip vertically
+#     rpiCameraVFlip: false
+#     # brightness [-1, 1]
+#     rpiCameraBrightness: 0
+#     # contrast [0, 16]
+#     rpiCameraContrast: 1
+#     # saturation [0, 16]
+#     rpiCameraSaturation: 1
+#     # sharpness [0, 16]
+#     rpiCameraSharpness: 1
+#     # exposure mode.
+#     # values: normal, short, long, custom
+#     rpiCameraExposure: normal
+#     # auto-white-balance mode.
+#     # values: auto, incandescent, tungsten, fluorescent, indoor, daylight, cloudy, custom
+#     rpiCameraAWB: auto
+#     # denoise operating mode.
+#     # values: auto, off, cdn_off, cdn_fast, cdn_hq
+#     rpiCameraDenoise: auto
+#     # fixed shutter speed, in microseconds.
+#     rpiCameraShutter: 0
+#     # metering mode of the AEC/AGC algorithm.
+#     # values: centre, spot, matrix, custom
+#     rpiCameraMetering: centre
+#     # fixed gain
+#     rpiCameraGain: 0
+#     # EV compensation of the image [-10, 10]
+#     rpiCameraEV: 0
+#     # Region of interest, in format x,y,width,height
+#     rpiCameraROI:
+#     # tuning file
+#     rpiCameraTuningFile:
+#     # sensor mode, in format [width]:[height]:[bit-depth]:[packing]
+#     # bit-depth and packing are optional.
+#     rpiCameraMode:
+#     # frames per second
+#     rpiCameraFPS: 30
+#     # period between IDR frames
+#     rpiCameraIDRPeriod: 60
+#     # bitrate
+#     rpiCameraBitrate: 1000000
+#     # H264 profile
+#     rpiCameraProfile: main
+#     # H264 level
+#     rpiCameraLevel: '4.1'
 
-    # Username required to publish.
-    # SHA256-hashed values can be inserted with the "sha256:" prefix.
-    publishUser:
-    # Password required to publish.
-    # SHA256-hashed values can be inserted with the "sha256:" prefix.
-    publishPass:
-    # IPs or networks (x.x.x.x/24) allowed to publish.
-    publishIPs: []
+#     # Username required to publish.
+#     # SHA256-hashed values can be inserted with the "sha256:" prefix.
+#     publishUser:
+#     # Password required to publish.
+#     # SHA256-hashed values can be inserted with the "sha256:" prefix.
+#     publishPass:
+#     # IPs or networks (x.x.x.x/24) allowed to publish.
+#     publishIPs: []
 
-    # Username required to read.
-    # SHA256-hashed values can be inserted with the "sha256:" prefix.
-    readUser:
-    # password required to read.
-    # SHA256-hashed values can be inserted with the "sha256:" prefix.
-    readPass:
-    # IPs or networks (x.x.x.x/24) allowed to read.
-    readIPs: []
+#     # Username required to read.
+#     # SHA256-hashed values can be inserted with the "sha256:" prefix.
+#     readUser:
+#     # password required to read.
+#     # SHA256-hashed values can be inserted with the "sha256:" prefix.
+#     readPass:
+#     # IPs or networks (x.x.x.x/24) allowed to read.
+#     readIPs: []
 
-    # Command to run when this path is initialized.
-    # This can be used to publish a stream and keep it always opened.
-    # This is terminated with SIGINT when the program closes.
-    # The following environment variables are available:
-    # * RTSP_PATH: path name
-    # * RTSP_PORT: server port
-    # * G1, G2, ...: regular expression groups, if path name is
-    #   a regular expression.
-    runOnInit:
-    # Restart the command if it exits suddenly.
-    runOnInitRestart: no
+#     # Command to run when this path is initialized.
+#     # This can be used to publish a stream and keep it always opened.
+#     # This is terminated with SIGINT when the program closes.
+#     # The following environment variables are available:
+#     # * RTSP_PATH: path name
+#     # * RTSP_PORT: server port
+#     # * G1, G2, ...: regular expression groups, if path name is
+#     #   a regular expression.
+#     runOnInit:
+#     # Restart the command if it exits suddenly.
+#     runOnInitRestart: no
 
-    # Command to run when this path is requested.
-    # This can be used to publish a stream on demand.
-    # This is terminated with SIGINT when the path is not requested anymore.
-    # The following environment variables are available:
-    # * RTSP_PATH: path name
-    # * RTSP_PORT: server port
-    # * G1, G2, ...: regular expression groups, if path name is
-    #   a regular expression.
-    runOnDemand:
-    # Restart the command if it exits suddenly.
-    runOnDemandRestart: no
-    # Readers will be put on hold until the runOnDemand command starts publishing
-    # or until this amount of time has passed.
-    runOnDemandStartTimeout: 10s
-    # The command will be closed when there are no
-    # readers connected and this amount of time has passed.
-    runOnDemandCloseAfter: 10s
+#     # Command to run when this path is requested.
+#     # This can be used to publish a stream on demand.
+#     # This is terminated with SIGINT when the path is not requested anymore.
+#     # The following environment variables are available:
+#     # * RTSP_PATH: path name
+#     # * RTSP_PORT: server port
+#     # * G1, G2, ...: regular expression groups, if path name is
+#     #   a regular expression.
+#     runOnDemand:
+#     # Restart the command if it exits suddenly.
+#     runOnDemandRestart: no
+#     # Readers will be put on hold until the runOnDemand command starts publishing
+#     # or until this amount of time has passed.
+#     runOnDemandStartTimeout: 10s
+#     # The command will be closed when there are no
+#     # readers connected and this amount of time has passed.
+#     runOnDemandCloseAfter: 10s
 
-    # Command to run when the stream is ready to be read, whether it is
-    # published by a client or pulled from a server / camera.
-    # This is terminated with SIGINT when the stream is not ready anymore.
-    # The following environment variables are available:
-    # * RTSP_PATH: path name
-    # * RTSP_PORT: server port
-    # * G1, G2, ...: regular expression groups, if path name is
-    #   a regular expression.
-    runOnReady:
-    # Restart the command if it exits suddenly.
-    runOnReadyRestart: no
+#     # Command to run when the stream is ready to be read, whether it is
+#     # published by a client or pulled from a server / camera.
+#     # This is terminated with SIGINT when the stream is not ready anymore.
+#     # The following environment variables are available:
+#     # * RTSP_PATH: path name
+#     # * RTSP_PORT: server port
+#     # * G1, G2, ...: regular expression groups, if path name is
+#     #   a regular expression.
+#     runOnReady:
+#     # Restart the command if it exits suddenly.
+#     runOnReadyRestart: no
 
-    # Command to run when a clients starts reading.
-    # This is terminated with SIGINT when a client stops reading.
-    # The following environment variables are available:
-    # * RTSP_PATH: path name
-    # * RTSP_PORT: server port
-    # * G1, G2, ...: regular expression groups, if path name is
-    #   a regular expression.
-    runOnRead:
-    # Restart the command if it exits suddenly.
-    runOnReadRestart: no
+#     # Command to run when a clients starts reading.
+#     # This is terminated with SIGINT when a client stops reading.
+#     # The following environment variables are available:
+#     # * RTSP_PATH: path name
+#     # * RTSP_PORT: server port
+#     # * G1, G2, ...: regular expression groups, if path name is
+#     #   a regular expression.
+#     runOnRead:
+#     # Restart the command if it exits suddenly.
+#     runOnReadRestart: no
